Added avoidance-triplet message

--- a/mavros_msgs/CMakeLists.txt
+++ b/mavros_msgs/CMakeLists.txt
@@ -11,6 +11,7 @@ add_message_files(
   ActuatorControl.msg
   Altitude.msg
   AttitudeTarget.msg
+  AvoidanceTriplet.msg
   BatteryStatus.msg
   CamIMUStamp.msg
   CommandCode.msg
